test/errors/dict/unknown_method.np
d = {1:2}

d.not_a_real_method()
